scoring logic complete, updated score state to be an object

--- a/src/style-questions.css
+++ b/src/style-questions.css
@@ -1,9 +1,12 @@
 .wrong{
-    color: red;
+    background-color: red;
 }
 .right{
-    color:green;
+    background-color:green;
 }
 .normal{
     color: black;
+}
+.unanswered{
+    background-color: grey;
 }
