logic to show right and wrong questions, plus some more basic styling

--- a/src/style-questions.css
+++ b/src/style-questions.css
@@ -5,7 +5,7 @@
     background-color:green;
 }
 .normal{
-    color: black;
+    background-color: transparent;
 }
 .unanswered{
     background-color: grey;
